--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<link rel="stylesheet" href="/style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://kit.fontawesome.com/6670e57514.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 	<title>L'Histoire des Jeux Video</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+	<nav class="navbar navbar-expand-sm navbar-dark">
 		<div class="container-fluid">
 			<ul class="navbar-nav">
 				<li class="nav-item"><a class="nav-link"  href="#">Accueil</a></li>
@@ -20,24 +21,24 @@
 			</ul>
 			<form class="d-flex">
         	<input class="form-control me-2" type="text" placeholder="Rechercher">
-        	<button class="btn btn-success" type="button">Rechercher</button>
+        	<a class="btn btn-success row text-nowrap" href="#" role="button"><i class="fa fa-magnifying-glass pe-3"></i> Rechercher</a>
       		</form>
 		</div>
 	</nav>
-	<div class="container-fluid bg-dark bgblack">
-		<header class="container p-2 bg-light text-dark rounded-1">
+	<div class="container-fluid">
+		<header class="container p-2 bg-light text-muted rounded-1">
 			<div>
 				<h1 class="display-3">History Game</h1>
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea laborum architecto in deleniti est molestias culpa nobis rem optio, doloribus, sint et ab.</p>
 				<hr>
 				<p class="h6">Lorem ipsum dolor sit amet consectetur.</p>
-				<a  href="#" role="button" class="btn btn-success">En Savoir plus &nbsp;&nbsp;</a>
+				<a  href="#" role="button" class="btn btn-success"><i class="bi bi-plus-circle-fill"></i> En Savoir plus &nbsp;&nbsp;</a>
 			</div>
 		</header>
 		<section class="container">
-			<h3 class="bg-dark text-light display-6 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+			<h3 class="  text-light display-6 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
 			<div class="row">
-				<div class="col-4 bg-dark">
+				<div class="col-4  ">
 					<div class="list-group">
 					<a href="#" class="list-group-item list-group-item-action">
 						<div class="d-flex w-100 justify-content-between">
@@ -65,7 +66,7 @@
 					</a>
 					</div>
 				</div>
-				<div class="col-8 bg-dark text-light">
+				<div class="col-8 text-light">
 				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis.
 				</p>
@@ -77,7 +78,7 @@
 		</section>
 		<hr>
 		<div class="container">
-			<h3 class="bg-dark text-light display-6">Et au commencement il y eut ...</h3>
+			<h3 class="  text-light display-6">Et au commencement il y eut ...</h3>
 			<div>
 				<section class="row">
 					<img class="col-md-2" src="img/Space_Invaders.png" alt="Space Invaders" />
@@ -91,12 +92,12 @@
 		</div>
 		<hr>
 		<div class="container">
-			<h3 class="bg-dark text-light display-6">Donec ut libero sed arcu vehicula ultricies a non tortor :</h3>
+			<h3 class="text-light display-6">Donec ut libero sed arcu vehicula ultricies a non tortor :</h3>
 			<div class="col-md-4 bg-light text-dark">
 				<div>
-					<div class="bg-success p-2 text-light green">Lorem ipsum dolor sit amet</div>
+					<div class="p-2 text-light green">Lorem ipsum dolor sit amet</div>
 					<div class="p-2 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus.Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. </div>
-					<div class="bg-success p-2 text-light green">Footer</div>
+					<div class="p-2 text-light green">Footer</div>
 				</div>
 			</div>
 			<br>
@@ -105,12 +106,12 @@
 		</div>
 		<hr>
 		<div class="container">
-			<h3 class="bg-dark text-light display-6">Quelques jeux célèbres et leur chronologie ... </h3>
+			<h3 class="text-light display-6">Quelques jeux célèbres et leur chronologie ... </h3>
 			<table class="table table-dark table-striped table-bordered">
-				<thead class="table-success text-light text-center">
+				<thead class="text-light text-center">
 					<tr>
-						<th class="col-md-5">Nom du jeu</th>
-						<th>Description</th>
+						<th class="col-md-5 green">Nom du jeu</th>
+						<th class="green">Description</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -172,9 +173,18 @@
 				</tbody>
 			</table>
 		</div>
+		<div class="container">
+			<ul class="pagination m-3">
+				<li class="page-item"><a class="page-link" href="#">Précédent</a></li>
+				<li class="page-item"><a class="page-link" href="#">1</a></li>
+				<li class="page-item active"><a class="page-link" href="#">2</a></li>
+				<li class="page-item"><a class="page-link" href="#">3</a></li>
+				<li class="page-item"><a class="page-link" href="#">Suivant</a></li>
+			</ul> 
+		</div>
 		<hr>
-		<footer>
-			<address>
+		<footer class="container">
+			<address class="text-muted">
 				<strong>AFPA DWWM</strong><br>
 				3 rue Franklin <br>
 				93 100 Montreuil<br>
